# YtVideoSummarizerRAG

./: .env  .gitignore  main.py  pyproject.toml
Frontend/: README.md
Frontend/src/: App.css  App.jsx
app/: chunker.py  config.py  embeddings.py  main.py  mainRag.py  transcript.py  vectorstore.py
